trying to fix things as usual

--- a/areaguide.html
+++ b/areaguide.html
@@ -141,7 +141,6 @@
           <h3>Some places to live in North London are:</h3>
           <ul>
             <li> <strong>Angel</strong> a thriving High Street and huge selection of pubs, bars, restaurants and shops </li>
-            <li> <strong>Hampstead</strong> if you want to live amongst the rich and famous </li>
             <li> <strong>Camden</strong> famous for its market and nightlife </li>
           </ul>
         </div>
@@ -164,7 +163,6 @@
           <ul>
               <li> <strong>Notting Hill</strong> A lovely area to live and home of the exciting Notting Hill Carnival</li>
               <li> <strong>Fulham</strong> lots of parks, two football clubs and some great pubs </li>
-              <li> <strong>Putney</strong> a quiet and green suburb, but not especially young or cool </li>
           </ul>
         </div>
       </div>
@@ -181,7 +179,7 @@
           <ul>
               <li> <strong>Soho</strong> a happening restaurant and theatre district </li>
               <li> <strong>Bloomsbury</strong> rub shoulders with the city's intellectuals </li>
-              <li> <strong>Marylebone</strong> famous for its quiet streets of majestic Georgian squares and terraces, pretty mews houses and Edwardian and Victorian mansion flats </li>
+              <li> <strong>Marylebone</strong> famous for its quiet streets of majestic Georgian squares. </li>
           </ul>
         </div>
       </div>
@@ -196,9 +194,9 @@
           <h3> Think hipsters and ecclectic bars and restaurants. </h3>
           <h3>Some places to live in East London are:</h3>
           <ul>
-          <li> <strong>Shoreditch</strong> hip bars and restaurants, boutique shops and galleries and the famous Brick Lane </li>
+          <li> <strong>Shoreditch</strong> hip bars, restaurants, boutique shops and Brick Lane </li>
       <li> <strong>Hackney</strong> the hang out of artists and creative-types </li>
-      <li> <strong>Stratford</strong> find your inner athlete near the site of the London Olympics! </li>
+      <li> <strong>Stratford</strong> find your inner athlete near the London Olympics! </li>
           </ul>
         </div>
       </div>
