--- a/importantstuff.html
+++ b/importantstuff.html
@@ -115,7 +115,7 @@
     <div class="col-md-6">
 <div class="textcontainer">
       <br />
-      <h4><strong>Where to look for spare rooms</strong></h4>
+      <h4><strong>Where to look for a place</strong></h4>
       <br />
       <h4>There are many places to start looking for your new London home <br /> <br />Why not try:</h4><br />
       <ul>
