Updated rights part of important stuff.

--- a/importantstuff.html
+++ b/importantstuff.html
@@ -180,6 +180,7 @@
       <h4>Make sure you make the most of your viewings by asking these things:</h4><br />
       <ul>
         <li>The amount of rent (weekly or monthly)</li><br  />
+        <li>The amount of deposit</li><br  />
         <li><strong>All</strong> fees associated with the property</li><br />
         <li>Council tax</li><br />
         <li>Approximate cost of bills per month</li><br  />
@@ -217,6 +218,24 @@
         <li>Water pressure</li><br  />
         <li>Are there any signs of vermin?</li><br  />
       </ul><br />
+    </div>
+  </div>
+  <div class="col-sm-3"> </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-3"> </div>
+    <div class="col-md-6">
+<div class="textcontainer">
+      <br />
+      <h4><strong>Your rights when renting</strong></h4>
+      <br />
+      <h4>Make sure you know your rights when renting a place by checking out these sites:</h4>
+      <ul>
+        <li><bold><a href="https://www.rentersrightslondon.org/your-rights/">Renters' Rights London</a></bold></li><br />
+        <li><bold><a href="http://debut.careers/insight/renting-rights-london-tenant/">Debut</a></bold></li><br />
+        <li><bold><a href="https://www.citizensadvice.org.uk/housing/renting-a-home/renting-from-a-private-landlord">Citizens Advice</a></bold></li>
+      </ul>
     </div>
   </div>
   <div class="col-sm-3"> </div>
