Changes to importantstuff

--- a/importantstuff.html
+++ b/importantstuff.html
@@ -143,7 +143,7 @@
         <li><strong>Short term or long term?</strong> Lets less than 12 months are usually called short term lets. If you're looking for a short term let, make sure you don't waste your time looking at places that are only available for longer.</li><br />
         <li><strong>Whole place or flatshare?</strong> You could rent a whole place and divide the rent with some friends or do a flatshare. A flatshare is when you rent a bedroom and share the rest of the house with other flatsharers.</li><br />
         <li><strong>Furnished or unfurnished?</strong> You might save money by renting an unfurnished place, but if you have to buy furniture it might cost more!</li><br />
-        <li><strong>Through a letting agent or directly with the landlord?</strong><li>You don't have to go through a letting agent. Many landlords prefer to rent directly (try OpenRent or SpareRoom).</li><br  />
+        <li><strong>Through a letting agent or directly with the landlord?</strong>You don't have to go through a letting agent. Many landlords prefer to rent directly (try OpenRent or SpareRoom).</li><br  />
       </ul>
     </div>
   </div>
