changes to carousel

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 </head>
 <body>
 
-
+<header>
 <div class="container">
 <div class="overlay"> 
         <h1>Living In London</h1>
-        <p>The overall guide for moving to London</p> 
+        <h2>The overall guide for moving to London</h2> 
+<br />
+<br />
+<br />
+
          <div class="row">
             <div id="topbutton" class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
@@ -88,7 +92,7 @@
   </a>
 </div>    
 </div>
-
+</header>
 <br />
 
 
@@ -115,7 +119,6 @@
   </div>
   <div class="col-sm-2"> </div>
 </div>
-
 
 
 
