--- a/areaguide.html
+++ b/areaguide.html
@@ -15,10 +15,11 @@
 </head>
 <body>
 
+<header>
 <div class="container">
 <div class="overlay"> 
         <h1> Area Guide </h1>
-        <p>The overall guide for moving to London</p> 
+        <h2>The overall guide for moving to London</h2> 
          <div class="row">
             <div id="topbutton" class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
@@ -110,7 +111,7 @@
 </div>
 
 <br />
-
+</header>
 
 <div class="row">
   <div class="col-sm-3"> </div>
