--- a/importantstuff.html
+++ b/importantstuff.html
@@ -16,11 +16,14 @@
 </head>
 <body>
 
-
+<header>
 <div class="container">
 <div class="overlay"> 
         <h1> The Important Stuff </h1>
-        <p>The overall guide for moving to London</p> 
+        <h2>The overall guide for moving to London</h2>         
+        <br />
+        <br />
+        <br />
          <div class="row">
             <div id="topbutton" class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
@@ -90,7 +93,7 @@
 </div>
 
 <br />
-
+</header>
 
 
 <div class="row">
