columns on important stuff

--- a/importantstuff.html
+++ b/importantstuff.html
@@ -110,7 +110,8 @@
 </div>
 
 
-
+<br />
+<br />
 
 
 <div class="row">
@@ -134,10 +135,14 @@
   <div class="col-sm-3"> </div>
 </div>
 
+<br />
+<br />
+<br />
+
+<div class="container">
 <div class="row">
-  <div class="col-sm-3"> </div>
     <div class="col-md-6">
-<div class="textcontainer">
+      <div class="textcontainer">
       <br />
       <h4><strong>Types of rental properties</strong></h4>
       <br />
@@ -150,11 +155,7 @@
       </ul>
     </div>
   </div>
-  <div class="col-sm-3"> </div>
-</div>
 
-<div class="row">
-  <div class="col-sm-3"> </div>
     <div class="col-md-6">
     <div class="textcontainer">
       <br />
@@ -169,12 +170,15 @@
       </ul><br />
       <h4>Check out <strong><a href="https://www.allagents.co.uk/"> allAgents</a></strong> for reviews of letting agents</h4>
     </div>
-  </div>
-  <div class="col-sm-3"> </div>
+ </div>
+</div>
 </div>
 
+<br />
+<br />
+
+<div class="container">
 <div class="row">
-  <div class="col-sm-3"> </div>
     <div class="col-md-6">
     <div class="textcontainer">
       <br />
@@ -196,13 +200,9 @@
         <li>Where's the nearest tube station/bus stop?</li><br  />
         <li>Where's the nearest supermarket?</li><br  />
       </ul><br />
-    </div>
-  </div>
-  <div class="col-sm-3"> </div>
-</div>
+      </div>
+      </div>
 
-<div class="row">
-  <div class="col-sm-3"> </div>
     <div class="col-md-6">
     <div class="textcontainer">
       <br />
@@ -221,10 +221,16 @@
         <li>Water pressure</li><br  />
         <li>Are there any signs of vermin?</li><br  />
       </ul><br />
-    </div>
-  </div>
-  <div class="col-sm-3"> </div>
 </div>
+</div>
+</div>
+</div>
+
+
+<br />
+<br />
+<br />
+
 
 <div class="row">
   <div class="col-sm-3"> </div>
