Fixed important stuff and changed headers to temp

--- a/importantstuff.html
+++ b/importantstuff.html
@@ -93,11 +93,10 @@
 </div>
 
 <br />
-<<<<<<< HEAD
-=======
+
 </header>
 
->>>>>>> 805d256acd0a491b212d69a39e5abe77d0804948
+
 
 <div class="row">
   <div class="col-sm-3"> </div>
@@ -111,18 +110,13 @@
   </div>
   <div class="col-sm-3"> </div>
 </div>
-
-
 <br />
 <br />
 
 
 <div class="row">
     <div class="col-md-12">
-      <div class="container2">
-        <img src="assets/images/North_no_border.jpg" alt="Avatar" class="image">
-        <div class="overlay2">
-          <div class="text">
+          <div class="textcontainer">
           <br />
           <h4><strong>Types of rental properties</strong></h4>
           <br />
@@ -134,10 +128,9 @@
             <li><strong>Through a letting agent or directly with the landlord?</strong>You don't have to go through a letting agent. Many landlords prefer to rent directly (try OpenRent or SpareRoom).</li><br  />
           </ul>
           </div>
-        </div>
       </div>
     </div>
-</div>
+ 
 
 <br />
 <br />
@@ -147,11 +140,9 @@
 <div class="row">
     <div class="col-md-6">
       <div class="textcontainer">
-<<<<<<< HEAD
-=======
       <br />
       <h4><strong>Types of rental properties</strong></h4>
->>>>>>> 805d256acd0a491b212d69a39e5abe77d0804948
+
       <br />
           <h4><strong>Where to look for a place</strong></h4>
           <br />
@@ -166,14 +157,14 @@
           </ul>
       </div>
     </div>
-<<<<<<< HEAD
+
   
   <div class="col-md-6">
-=======
+
   </div>
 
     <div class="col-md-6">
->>>>>>> 805d256acd0a491b212d69a39e5abe77d0804948
+
     <div class="textcontainer">
       <br />
       <h4><strong>Letting Agents</strong></h4>
@@ -187,12 +178,12 @@
       </ul><br />
       <h4>Check out <strong><a href="https://www.allagents.co.uk/"> allAgents</a></strong> for reviews of letting agents</h4>
     </div>
-<<<<<<< HEAD
+
   </div>
-=======
+
  </div>
 </div>
->>>>>>> 805d256acd0a491b212d69a39e5abe77d0804948
+
 </div>
 
 <br />
@@ -200,11 +191,7 @@
 
 <div class="container">
 <div class="row">
-<<<<<<< HEAD
-  <div class="col-md-6">
-=======
     <div class="col-md-6">
->>>>>>> 805d256acd0a491b212d69a39e5abe77d0804948
     <div class="textcontainer">
       <br />
       <h4><strong>Things to ask when you view a place</strong></h4>
@@ -225,17 +212,16 @@
         <li>Where's the nearest tube station/bus stop?</li><br  />
         <li>Where's the nearest supermarket?</li><br  />
       </ul><br />
-<<<<<<< HEAD
+
     </div>
   </div>
 
   <div class="col-md-6">
-=======
-      </div>
+
       </div>
 
     <div class="col-md-6">
->>>>>>> 805d256acd0a491b212d69a39e5abe77d0804948
+
     <div class="textcontainer">
       <br />
       <h4><strong>Things to check when you view a place</strong></h4>
@@ -253,12 +239,11 @@
         <li>Water pressure</li><br  />
         <li>Are there any signs of vermin?</li><br  />
       </ul><br />
-<<<<<<< HEAD
+
     </div>
   </div>
-=======
->>>>>>> 805d256acd0a491b212d69a39e5abe77d0804948
-</div>
+
+
 </div>
 </div>
 </div>
