--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
 <div class="overlay"> 
         <h1>Living In London</h1>
         <h2>The overall guide for moving to London</h2> 
-<br />
-<br />
-<br />
 
          <div class="row">
             <div id="topbutton" class="col-sm-4">
@@ -63,20 +60,20 @@
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="assets/images/bigben60004000.jpeg" alt="Living In London">
+      <img src="assets/images/header1.jpg" alt="Living In London">
     </div>
 
        <div class="item">
-      <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
+      <img src="assets/images/header2.jpg" alt="Important Stuff">
     </div>
 
 
     <div class="item">
-      <img src="assets/images/pica60004000.jpg" alt="Important Stuff">
+      <img src="assets/images/header3.jpg" alt="Important Stuff">
     </div>
 
     <div class="item">
-      <img src="assets/images/newstpauls60004000.jpg" alt="Important Stuff">
+      <img src="assets/images/header4.jpg" alt="Important Stuff">
   </div>
 
 
