--- a/index.html
+++ b/index.html
@@ -60,20 +60,20 @@
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="assets/images/header1.jpg" alt="Living In London">
+      <img src="assets/images/1500header1.jpg" alt="Living In London">
     </div>
 
        <div class="item">
-      <img src="assets/images/header2.jpg" alt="Important Stuff">
+      <img src="assets/images/1500header2.jpg" alt="Important Stuff">
     </div>
 
 
     <div class="item">
-      <img src="assets/images/header3.jpg" alt="Important Stuff">
+      <img src="assets/images/1500header3.jpg" alt="Important Stuff">
     </div>
 
     <div class="item">
-      <img src="assets/images/header4.jpg" alt="Important Stuff">
+      <img src="assets/images/1500header4.jpg" alt="Important Stuff">
   </div>
 
 
