new header things

--- a/importantstuff.html
+++ b/importantstuff.html
@@ -62,22 +62,21 @@
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="assets/images/bigben60004000.jpeg" alt="Living In London">
+      <img src="assets/images/1500header1.jpg" alt="Living In London">
     </div>
 
        <div class="item">
-      <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
+      <img src="assets/images/1500header2.jpg" alt="Important Stuff">
     </div>
 
 
     <div class="item">
-      <img src="assets/images/pica60004000.jpg" alt="Important Stuff">
+      <img src="assets/images/1500header3.jpg" alt="Important Stuff">
     </div>
 
     <div class="item">
-      <img src="assets/images/newstpauls60004000.jpg" alt="Important Stuff">
+      <img src="assets/images/1500header4.jpg" alt="Important Stuff">
   </div>
-
 
 
   <!-- Left and right controls -->
