Updated hover on important.html

--- a/importantstuff.html
+++ b/importantstuff.html
@@ -116,47 +116,57 @@
 
 <div class="row">
     <div class="col-md-12">
-          <div class="textcontainer">
-          <br />
-          <h4><strong>Types of rental properties</strong></h4>
-          <br />
-          <h4>There are lots of different rental options. These things will help you decide what you're looking for</h4><br />
-          <ul>
-            <li><strong>Short term or long term?</strong> Lets less than 12 months are usually called short term lets. If you're looking for a short term let, make sure you don't waste your time looking at places that are only available for longer.</li><br />
-            <li><strong>Whole place or flatshare?</strong> You could rent a whole place and divide the rent with some friends or do a flatshare. A flatshare is when you rent a bedroom and share the rest of the house with other flatsharers.</li><br />
-            <li><strong>Furnished or unfurnished?</strong> You might save money by renting an unfurnished place, but if you have to buy furniture it might cost more!</li><br />
-            <li><strong>Through a letting agent or directly with the landlord?</strong>You don't have to go through a letting agent. Many landlords prefer to rent directly (try OpenRent or SpareRoom).</li><br  />
-          </ul>
+      <div class="container2">
+        <img src="assets/images/Important_2.jpg" alt="Avatar" class="Important_2">
+          <div class="overlay2">
+            <div class="text">
+            <h4>There are lots of different rental options.</h4><br />
+            <ul>
+              <li><strong>Short term or long term?</strong> Lets less than 12 months are usually called short term lets. If you're looking for a short term let, make sure you don't waste your time looking at places that are only available for longer.</li><br />
+              <li><strong>Whole place or flatshare?</strong> You could rent a whole place and divide the rent with some friends or do a flatshare. A flatshare is when you rent a bedroom and share the rest of the house with other flatsharers.</li><br />
+              <li><strong>Furnished or unfurnished?</strong> You might save money by renting an unfurnished place, but if you have to buy furniture it might cost more!</li><br />
+              <li><strong>Through a letting agent or directly with the landlord?</strong> You don't have to go through a letting agent. Many landlords prefer to rent directly (try OpenRent or SpareRoom).</li><br  />
+            </ul>
+            </div>
           </div>
-      </div>
+        </div>
     </div>
- 
+ </div>
 
 <br />
 <br />
 <br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 
-<div class="container">
 <div class="row">
-    <div class="col-md-6">
-      <div class="textcontainer">
-      <br />
-      <h4><strong>Types of rental properties</strong></h4>
-
-      <br />
-          <h4><strong>Where to look for a place</strong></h4>
-          <br />
-          <h4>There are many places to start looking for your new London home <br /> <br />Why not try:</h4><br />
-          <ul>
-            <li><bold><a href="https://www.spareroom.co.uk">SpareRoom</a></bold> is a good place to look for spare rooms across London. It's free to use, but some for features you need to be a subscriber. This is a good place to look if you are looking for short-term lets. As with all free sites, make sure you view the place before you hand over any money.</li><br />
-            <li><bold><a href="https://www.openrent.co.uk/">OpenRent</a></bold> links landlords and tenants directly which reduces fees!</li><br />
-            <li><bold><a href="https://www.rentsquare.io/tenants/">rentsquare</a></bold> is another way to find places with lower rent and lower fees.</li><br />
-            <li><bold><a href="http://www.rightmove.co.uk/">RightMove</a></bold> is also a great site for longer term rentals, although the listings tend to be from agents who may charge high fees.</li><br />
-            <li><bold><a href="https://www.primelocation.com/to-rent/">PrimeMove</a></bold> is similar to RightMove, it has lots of longer term listings by agents across London.</li><br />
-            <li>You might also like to try <bold><a href="https://www.gumtree.com/property-to-rent/london">Gumtree</a></bold> or websites (or shop windows) of letting agents. Hover over the <strong>Letting Agents</strong> box for a few pointers!</li>
-          </ul>
-      </div>
+  <div class="col-md-6">
+    <div class="container2">
+      <img src="assets/images/Important_1.jpg" alt="Avatar" class="image">
+          <div class="overlay2">
+            <div class="text">
+            <br />
+            <h4><strong>Where to look for a place</strong></h4>
+            <br />
+            <h4>There are many places to start looking for your new London home <br /> <br />Why not try:</h4><br />
+            <ul>
+              <li><bold><a href="https://www.spareroom.co.uk">SpareRoom</a></bold> is a good place to look for spare rooms across London. It's free to use, but some for features you need to be a subscriber. This is a good place to look if you are looking for short-term lets. As with all free sites, make sure you view the place before you hand over any money.</li><br />
+              <li><bold><a href="https://www.openrent.co.uk/">OpenRent</a></bold> links landlords and tenants directly which reduces fees!</li><br />
+              <li><bold><a href="https://www.rentsquare.io/tenants/">rentsquare</a></bold> is another way to find places with lower rent and lower fees.</li><br />
+              <li><bold><a href="http://www.rightmove.co.uk/">RightMove</a></bold> is also a great site for longer term rentals, although the listings tend to be from agents who may charge high fees.</li><br />
+              <li><bold><a href="https://www.primelocation.com/to-rent/">PrimeMove</a></bold> is similar to RightMove, it has lots of longer term listings by agents across London.</li><br />
+              <li>You might also like to try <bold><a href="https://www.gumtree.com/property-to-rent/london">Gumtree</a></bold> or websites (or shop windows) of letting agents. Hover over the <strong>Letting Agents</strong> box for a few pointers!</li>
+            </ul>
+            </div>
+          </div>
+        </div>
     </div>
+  </div>
 
   
   <div class="col-md-6">
